--- a/exercises/basic/apply-js.html
+++ b/exercises/basic/apply-js.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Apply JavaScript example</title>
+    <title>Apply JavaScript example1</title>
   </head>
   <body>
     <button>Click me</button>
