--- a/exercicios/alura-pratica/js-curso-2-desafio_1/index.html
+++ b/exercicios/alura-pratica/js-curso-2-desafio_1/index.html
@@ -11,10 +11,10 @@
         <h1></h1>
     </header>
     <main class="container">
-        <button onclick="" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
-        <button onclick="" class="button">Soma</button>
+        <button onclick="verificarBotao()" class="button">Console</button>
+        <button onclick="mensagemAlerta()" class="button">Alert</button>
+        <button onclick="mensagemCiudad()" class="button">Prompt</button>
+        <button onclick="somaDois()" class="button">Soma</button>
     </main>
 
       <script src="app.js"></script>
