--- a/curso-alura/treino 4/index.html
+++ b/curso-alura/treino 4/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>JS Game</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="container">
-        <div class="container__conteudo">
-            <img src="./img/robot.png" alt="robô mergulhador" class="container__imagem-robo" />
-            <div class="container__informacoes">
-                <img src="./img/trophy.png" alt="ícone de um troféu" />
-                 <div class="container__texto">
-                    <h1>Você <span class="container__texto-azul">acertou!</span></h1>
-                    <h2>Você descobriu o número secreto!</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="app.js" defer></script>
-</body>
+    <header>
+        <h1></h1>
+    </header>
+    <main class="container">
+        <button onclick="verificarBotao()" class="button">Console</button>
+        <button onclick="mensagemAlerta()" class="button">Alert</button>
+        <button onclick="mensagemCiudad()" class="button">Prompt</button>
+        <button onclick="somaDois()" class="button">Soma</button>
+    </main>
 
+      <script src="app.js"></script>
+</body>
 </html>
